kubernetes-labs/lab-30-istio-authorization-policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-30-authz
  labels:
    istio-injection: enabled
